# corewatcher

./: .gitignore  95-core.conf  Makefile  Makefile.am  README  autogen.sh  configfile.c  configure.ac  core.c  coredump.c  coredumper.h  corewatcher-applet.c  corewatcher-applet.desktop  corewatcher-config.c  corewatcher-core.conf  corewatcher.8  corewatcher.c  corewatcher.conf  corewatcher.dbus  corewatcher.h  corewatcher.init  corewatcher.supp  dbus.c  dmesg.c  example_highquality.yaml  example_lowquality.yaml  extract_core.c  find_file.c  gdb.command  segfault.c  submit.c  webinterface.c
po/: Makefile  Zh.TW.po  ar.po  ast.po  ca.po  ca@valencia.po  corewatcher.pot  cs.po  de.po  en_GB.po  es.po  es_MX.po  eu.po  fa.po  fi.po  fr.mo  fr.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.mo  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  vi.po  wa.po  zh_CN.po  zh_TW.po
src/: Makefile.am  configfile.c  coredump.c  corewatcher-config.c  corewatcher.c  corewatcher.h  corewatcher.service.in  find_file.c  inotification.c  submit.c  submit_core
tests/: bad-write.c  run-test.sh
